[package]
name = "fast-kd"
version ="0.1.1"
authors = ["Christoff van Zyl<stoffel1997@gmail.com>"]
description = "K-dimensional tree in Rust for fast geospatial indexing and nearest neighbors lookup"
keywords = ["kd-tree", "kdtree", "kd", "nearest", "neighbor"]
readme = "README.md"
license = "MIT OR Apache-2.0"
autobenches = false
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[dev-dependencies]
kdtree = "0.6.0"
rand = "0.8"
rand_distr = "0.4"
criterion = "0.3.5"
aligned = "0.4"
serde = "1.0"
serde_json = "1.0.64"


[dependencies]
num-traits = "0.2"
ordered-float = "2.8.0"


[dependencies.serde]
version = "1.0"
optional = true

[dependencies.serde_derive]
version = "1.0"
optional = true

[features]
serialize = ["serde", "serde_derive"]

[[bench]]
name = "speed_bench"
path = "benches/bench.rs"
harness = false

